--- a/css/medical.css
+++ b/css/medical.css
@@ -44,16 +44,16 @@ ul{
 	height: 60px;
 	color: white;
 	padding: 10px;
+	margin: 0;
 }
 .footer2{
-/*	overflow-x: hidden;
-	overflow-y: hidden;*/
-	position: absolute;
-/*	height: 50px;*/
+/* 	overflow-x: hidden; */
+	overflow-y: hidden;
 	background-color: darkgreen;
 	width: 100%;
 	color: white;
 	padding: 10px;
+	margin: 0;
 }
 @media (max-width: 700px) {
 .left{display: none;}
