--- a/css/medical.css
+++ b/css/medical.css
@@ -36,27 +36,42 @@ ul{
 	font-size: 30px;
 }
 .footer1{
-/*	overflow-x: hidden;
-	overflow-y: hidden;*/
 	position: absolute;
 	background-color: darkgreen;
 	width: 100%;
 	height: 60px;
 	color: white;
 	padding: 10px;
-	margin: 0;
+	margin-bottom:0;
 }
 .footer2{
-/* 	overflow-x: hidden; */
 	overflow-y: hidden;
+	position: absolute;
+	height: 60px;
 	background-color: darkgreen;
 	width: 100%;
 	color: white;
 	padding: 10px;
-	margin: 0;
+	margin-bottom:0;
+}
+a {
+	color: lightblue;
 }
 @media (max-width: 700px) {
-.left{display: none;}
-.right{width: 90%;}
-.footer2{text-align: center;}
+.left{
+	display: none;}
+.right{
+	width: 100%;
+	right: 0px;}
+.footer2{
+	text-align: center;}
+}
+@media (max-width: 1024px) {
+.left{
+	display: none;}
+.right{
+	width: 100%;
+	right: 0px;}
+.footer2{
+	text-align: center;}
 }
